--- a/copilot-theorem/copilot-theorem.cabal
+++ b/copilot-theorem/copilot-theorem.cabal
@@ -115,3 +115,5 @@ library
                           , Copilot.Theorem.TransSys.Operators
                           , Copilot.Theorem.TransSys.Type
 
+
+			  , Copilot.Theorem.What4.Translate
