Start breaking the What4 translator into separate modules.

--- a/copilot-theorem/copilot-theorem.cabal
+++ b/copilot-theorem/copilot-theorem.cabal
@@ -101,3 +101,5 @@ library
                           , Copilot.Theorem.TransSys.Operators
                           , Copilot.Theorem.TransSys.Type
 
+
+			  , Copilot.Theorem.What4.Translate
